[metadata]
name = vnpy_tdengine
version = 1.0.2
url = https://github.com/flytrap/vnpy_tdengine
license = MIT
author = flytrap
author_email = hiddenstat@gmail.com
description = Tdengine database manager for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
    tdengine
    taos
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
zip_safe = False
install_requires =
    requests
    loguru
